objects/Sales_Discovery__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approve_Site_Walk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Site Walk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buying_Cycle__c</fullName>
        <inlineHelpText>What is the timing of their buying cycle?  Does it align with the objectives stated in the Goals question?</inlineHelpText>
        <label>Buying Cycle</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Makers__c</fullName>
        <inlineHelpText>Who are the influencers and decision makers and are you able to approach them?</inlineHelpText>
        <label>Decision Makers</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Process__c</fullName>
        <inlineHelpText>What is the dealers decision process ?</inlineHelpText>
        <label>Decision Process</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Dealer_Commitment__c</fullName>
        <inlineHelpText>Have you been able to determine that the prospect is not locked in to someone else’s capabilities and are willing to make changes?</inlineHelpText>
        <label>Existing Dealer Commitment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals__c</fullName>
        <inlineHelpText>What are the Significant goals, problems and needs this dealer has? 
a) Can CDK Meet them? 
b) Provide the names of three people with whom you have verified the information.</inlineHelpText>
        <label>Goals</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Sites__c</fullName>
        <label>Number of Sites</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Site_Sales_Discovery_Approval_Date__c</fullName>
        <label>Site Walk Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Discovery</relationshipLabel>
        <relationshipName>Sales_Discovery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Solutions_Count__c</fullName>
        <label>Proposed Solutions Count</label>
        <summaryFilterItems>
            <field>Sales_Discovery_Site__c.Proposed_Solutions_Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Discovery_Site__c.Sales_Discovery__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote_Request_Submitted_Date__c</fullName>
        <label>Quote Request Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_Request_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Request Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reject_Site_Walk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reject Site Walk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rush__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a Rush Request</description>
        <label>Rush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_DOS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales DOS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Discovery1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Discovery_Completed_Count__c</fullName>
        <label>Sales Discovery Completed Count</label>
        <summaryFilterItems>
            <field>Sales_Discovery_Site__c.Sales_Discovery_Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Discovery_Site__c.Sales_Discovery__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Discovery_Needed_By__c</fullName>
        <label>Sales Discovery Needed By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Discovery_Status__c</fullName>
        <label>Sales Discovery Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Discovery Created</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Qualitative Sales Discovery Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Discovery Summary Report Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Discovery Summary Report Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Discovery In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Discovery Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Request Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Discovery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Count__c</fullName>
        <label>Site Count</label>
        <summaryForeignKey>Sales_Discovery_Site__c.Sales_Discovery__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Site_Walk_Completed_Date__c</fullName>
        <label>Site Walk Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Site_Walk_Rejection_Date__c</fullName>
        <label>Site Walk Rejection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Site_Walk_Request_Submitted_Date__c</fullName>
        <label>Site Walk Request Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Site_Walk_Request_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Walk Request Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sites_Involved_With_Request__c</fullName>
        <label>Sites Involved With Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Current Status</label>
        <picklist>
            <picklistValues>
                <fullName>Virtual Discovery Request Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Sales Discovery Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Site Discovery Request Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Site Discovery Request Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Site Discovery Request Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Site Sales Discovery Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Discovery Summary Report Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Discovery Summary Report Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Discovery Summary Report Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Discovery Summary Report Acknowledged by Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Submitted for a Quote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary_Report_Acknowledged_Date__c</fullName>
        <label>Summary Report Acknowledged Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Summary_Report_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summary Report Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary_Report_Completed_Date__c</fullName>
        <label>Summary Report Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Summary_Report_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summary Report Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary_Report_Sent_Date__c</fullName>
        <label>Summary Report Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Summary_Report_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summary Report Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Site_Walk_Completed_Count__c</fullName>
        <label>Technical Site Walk Completed Count</label>
        <summaryFilterItems>
            <field>Sales_Discovery_Site__c.Technical_Site_Walk_Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Discovery_Site__c.Sales_Discovery__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Technical_Site_Walk_Status__c</fullName>
        <label>Technical Site Walk Status</label>
        <picklist>
            <picklistValues>
                <fullName>Request Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Rejected</fullName>
                <color>#FF6666</color>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#33CC00</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Virtual_Discovery_Completed_Count__c</fullName>
        <label>Virtual Discovery Completed Count</label>
        <summaryFilterItems>
            <field>Sales_Discovery_Site__c.Virtual_Discovery_Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Discovery_Site__c.Sales_Discovery__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Virtual_Discovery_Request_Submitted_Date__c</fullName>
        <label>Virtual Discovery Request Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Virtual_Discovery_Request_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Discovery Request Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Virtual_Sales_Discovery_Completed_Date__c</fullName>
        <label>Virtual Sales Discovery Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Virtual_Sales_Discovery_Status__c</fullName>
        <label>Virtual Sales Discovery Status</label>
        <picklist>
            <picklistValues>
                <fullName>Request Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request in Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Willingness__c</fullName>
        <inlineHelpText>Is the dealer willing to invest time, effort, and money to achieve the goal, meet the need and solve the problem?</inlineHelpText>
        <label>Willingness</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Sales Discovery</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Sales_Discovery_Needed_By__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sales_Discovery_Site_Technician_Sales_Discovery</fullName>
        <filterScope>Queue</filterScope>
        <label>Sales Discovery Site Technician</label>
        <queue>Sales_Discovery_Site_Technician</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sales_Discovery_Virtual_Specialist_Sales_Discovery</fullName>
        <filterScope>Queue</filterScope>
        <label>Sales Discovery Virtual Specialist</label>
        <queue>Sales_Discovery_Virtual_Specialist</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Sales Discovery ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Discovery</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Answer_missing_for_Decision_Process</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Site_Walk_Request_Submitted__c ==true, ISBLANK(Decision_Process__c ))</errorConditionFormula>
        <errorDisplayField>Decision_Process__c</errorDisplayField>
        <errorMessage>Please answer the question before submitting request for Site Walk to the DOS.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Answer_missing_for_Existing_Dlr_Commit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Site_Walk_Request_Submitted__c ==true, ISBLANK(  Existing_Dealer_Commitment__c ))</errorConditionFormula>
        <errorDisplayField>Existing_Dealer_Commitment__c</errorDisplayField>
        <errorMessage>Please answer the question before submitting request for Site Walk to the DOS.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Answer_missing_for_Goals</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Site_Walk_Request_Submitted__c ==true, ISBLANK(   Goals__c ))</errorConditionFormula>
        <errorDisplayField>Goals__c</errorDisplayField>
        <errorMessage>Please answer the question before submitting request for Site Walk to the DOS.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Answer_missing_for_Willingness</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Site_Walk_Request_Submitted__c ==true, ISBLANK( Willingness__c ))</errorConditionFormula>
        <errorDisplayField>Willingness__c</errorDisplayField>
        <errorMessage>Please answer the question before submitting request for Site Walk to the DOS.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Answer_missing_for_buying_cycle</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Site_Walk_Request_Submitted__c ==true, ISBLANK(  Buying_Cycle__c ))</errorConditionFormula>
        <errorDisplayField>Buying_Cycle__c</errorDisplayField>
        <errorMessage>Please answer the question before submitting request for Site Walk to the DOS.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Answer_missing_for_decision_maker</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Site_Walk_Request_Submitted__c ==true, ISBLANK( Decision_Makers__c))</errorConditionFormula>
        <errorDisplayField>Decision_Makers__c</errorDisplayField>
        <errorMessage>Please answer the question before submitting request for Site Walk to the DOS.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_submit_request_before_completion</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Not( ISPICKVAL( Virtual_Sales_Discovery_Status__c , &quot;Completed&quot;) ), 
Site_Walk_Request_Submitted__c ==true)</errorConditionFormula>
        <errorDisplayField>Site_Walk_Request_Submitted__c</errorDisplayField>
        <errorMessage>Please wait for the Virtual Discovery to be completed in order to submit request for Site Walk to the DOS.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_submit_virtual_with_no_sites</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Site_Count__c ==0 ,  Virtual_Discovery_Request_Submitted__c ==true)</errorConditionFormula>
        <errorDisplayField>Virtual_Discovery_Request_Submitted__c</errorDisplayField>
        <errorMessage>Please add the site information  before requesting a Virtual Discovery  for this Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Create_Discovery_for_Unhook_Opportunity</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(Opportunity__r.Type, &quot;Unhook&quot;))</errorConditionFormula>
        <errorMessage>Sales Discovery request can be submitted for Unhook deals only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DOS_information_missing</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Site_Walk_Request_Submitted__c ==true, ISBLANK(   Sales_DOS__c))</errorConditionFormula>
        <errorDisplayField>Sales_DOS__c</errorDisplayField>
        <errorMessage>DOS information is missing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Discovery_limited_to_region</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL(Opportunity__r.Account.Region__c,&quot;ARG&quot;),ISPICKVAL(Opportunity__r.Account.Region__c,&quot;Division&quot;),ISPICKVAL(Opportunity__r.Account.Region__c,&quot;Enterprise&quot;),ISPICKVAL(Opportunity__r.Account.Region__c,&quot;Hoffman Sales&quot;),ISPICKVAL(Opportunity__r.Account.Region__c,&quot;Independent Truck Dealer&quot;),ISPICKVAL(Opportunity__r.Account.Region__c,&quot;National&quot;),ISPICKVAL(Opportunity__r.Account.Region__c,&quot;NIADA&quot;),ISPICKVAL(Opportunity__r.Account.Region__c,&quot;PFW&quot;),ISPICKVAL(Opportunity__r.Account.Region__c,&quot;Truck&quot;))</errorConditionFormula>
        <errorMessage>Sales Discovery creation is currently available for specific regions only</errorMessage>
    </validationRules>
</CustomObject>